--- a/yum/index.html
+++ b/yum/index.html
@@ -9,6 +9,35 @@
   	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
   <body>
-	<!-- This is where your page content goes-->
+	<h1>LEMON SURPRISE PUDDING</h1><br>
+	<h4>Serves <span>6</span>  -  Prep time <span>30m-1h</span>  -  Cooking Time<span> 30m-1h</span> </h4>
+	<br><br>
+	<section>
+		<article>
+		<h5>Ingredients</h5><br>
+		<ul>
+			<li>3 lemons</li>
+			<li>1/4 cup unsalted butter, softened, plus extra for greasing</li>
+			<li>1 cup vanilla sugar or plain caster sugar</li>
+			<li>4 eggs, separated</li>
+			<li>1/2 cup plain flour</li>
+			<li>2 cups milk</li>
+		</ul>
+		</article>
+		<br><br>
+		<article>
+			<h5>Directions</h5>
+			<br>
+			<p>Preheat oven to 350 F&#176; Butter a 2 liter shallow oven proof dish.</p><br>
+			<h6>
+			<ul>
+				<li>Gragte the zest from two of the lemons, then squeeze the juice of all 3.</li><br>
+				<li>Cream the butter with the sugar and lemon zest. Beat in the egg yolks one by one. Do not panic if the mixture curdles. Next beat in the flour a spoonful at a time, alternating with slurps of milk and lemon juice.</li><br>
+				<li>Once that is all in, whisk the egg whites until they form stiff peaks, and fold lightly into the lemon batter. Pour the mixture into the baking dish to come about halfway up the sides.</li><br>
+				<li>Bake in the over for 40-45 minutes until the pudding is golden brown.</li>
+				</ul>
+				</h6>
+				<p>Serve hot or warm, with or without cream.</p>
+	</section>
   </body>
 </html>
