--- a/yum/index.html
+++ b/yum/index.html
@@ -7,6 +7,7 @@
   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   	<![endif]-->
   	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+	<link href='http://fonts.googleapis.com/css?family=Francois+One|Roboto+Slab:700,300' rel='stylesheet' type='text/css'>
   </head>
   <body>
 	<h1>LEMON SURPRISE PUDDING</h1><br>
