are we fixed now?

--- a/yum/index.html
+++ b/yum/index.html
@@ -39,6 +39,7 @@
 			</h6>
 			</ul>
 				<p>Serve hot or warm, with or without cream.</p>
-	</article>
+		</article>
+	</section>
   </body>
 </html>
