--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -4,9 +4,9 @@
 
 	<meta charset="utf-8">
 	<title>dots and cads</title>
-	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="reset.css"/>
 
-	<link href='http://fonts.googleapis.com/css?family=Averia+Serif+Libre:300,400,300italic,400italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Averia+Serif+Libre|Montserrat:400,700' rel='stylesheet' type='text/css'>
 	
   </head>
 
@@ -14,8 +14,8 @@
 
   <body>
 	<section>
-	<h1>Dogs Vs Cats</h1><br><br>
 	<img src="dogvscat-logo.gif"/>
+	<h1>Dogs Vs Cats</h1><br>
 		<article>
 	<h2>Dogs have better noses</h2><br>
 	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
