--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -14,6 +14,17 @@
 
   <body>
 	<section>
+	<nav>
+		<ul>
+			<li>Photos</li>
+			<li>About</li>
+			<li>Submit</li>
+			<li>Blog</li>
+			<li>Contact</li>
+		</ul>
+	</nav>
+  	</section>
+	<section>
 	<img src="dogvscat-logo.gif"/>
 	<h1>Dogs Vs Cats</h1><br>
 		<article>
