--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -25,7 +25,7 @@
 	</nav>
   	</section>
 	<section>
-	<img src="dogvscat-logo.gif"/>
+	<img src="dogvscat-logo.gif" alt="logo">
 	<h1>Dogs Vs Cats</h1><br>
 		<article>
 	<h2>Dogs have better noses</h2><br>
