Crack pot iguanas

--- a/yum/index.html
+++ b/yum/index.html
@@ -29,9 +29,9 @@
 			<br>
 			<p>Preheat oven to 350 F&#176; Butter a 2 liter shallow oven proof dish.</p><br>
 			<ul>
-				<li>Gragte the zest from two of the lemons, then squeeze the juice of all 3.</li><br>
-				<li>Cream the butter with the sugar and lemon zest. Beat in the egg yolks one by one. Do not panic if the mixture curdles. Next beat in the flour a spoonful at a time, alternating with slurps of milk and lemon juice.</li><br>
-				<li>Once that is all in, whisk the egg whites until they form stiff peaks, and fold lightly into the lemon batter. Pour the mixture into the baking dish to come about halfway up the sides.</li><br>
+				<li>Gragte the zest from two of the lemons, then squeeze the juice of all 3.</li>
+				<li>Cream the butter with the sugar and lemon zest. Beat in the egg yolks one by one. Do not panic if the mixture curdles. Next beat in the flour a spoonful at a time, alternating with slurps of milk and lemon juice.</li>
+				<li>Once that is all in, whisk the egg whites until they form stiff peaks, and fold lightly into the lemon batter. Pour the mixture into the baking dish to come about halfway up the sides.</li>
 				<li>Bake in the over for 40-45 minutes until the pudding is golden brown.</li>
 			</ul>
 				<p>Serve hot or warm, with or without cream.</p>
