--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -6,7 +6,7 @@
 	<title>dots and cads</title>
 	<link rel="stylesheet" type="text/css" href="reset.css"/>
 
-	<link href='http://fonts.googleapis.com/css?family=Averia+Serif+Libre|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Averia+Serif+Libre|Montserrat:400,700' rel='stylesheet' type='text/css'/>
 	
   </head>
 
@@ -25,7 +25,7 @@
 	</nav>
   	</section>
 	<section>
-	<img src="dogvscat-logo.gif" alt="logo">
+	<img src="images/dogvscat-logo.gif" alt="logo">
 	<h1>Dogs Vs Cats</h1><br>
 		<article>
 	<h2>Dogs have better noses</h2><br>
