--- a/GIF!/index.html
+++ b/GIF!/index.html
@@ -8,7 +8,7 @@
 		
 		<body>
 			<h1>Hello there,<h1><h3>I'm testing my gifs.</h3><br>
-			<p>Hey there people, puppies, porcupines, and the spell check function that I think is probably maybe possibly not functioning at the moment that is now. How are you today!? I do hope your day is going quite splendidly. If not. I know the perfect remedy for a non-splendid day: Kick a baby hipporangutang in the left ear and poke its belly button three times while hopping on one foot and chanting Oooga-Chacka for five solid seconds, no more, no less. Once you have done this, magic splendidness will rain from the heavens onto your blesses head and your day will be splendid. I swear on my goldfish's grave. <br> I made this gif. Thank you for visiting my page.</p>
+			<p>Hey there people, puppies, porcupines, and the spell check function that I think is probably maybe possibly not functioning at the moment that is now. How are you today!? I do hope your day is going quite splendidly. If not. I know the perfect remedy for a non-splendid day: Kick a baby hipporangutang in the left ear and poke its belly button three times while hopping on one foot and chanting Oooga-Chacka for five solid seconds, no more, no less. Once you have done this, magic splendidness will rain from the heavens onto your blesses head and your day will be splendid. I swear on my goldfish's grave. <br> <br>I made this gif. Thank you for visiting my page.</p>
 			<br>
 			<img src="images/Sezra-gif.gif">
 			<p> so it did work!</p>
