--- a/meeee/index.html
+++ b/meeee/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Dancing Unicorns. Yes.</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+	<link href='http://fonts.googleapis.com/css?family=Istok+Web|Homemade+Apple' rel='stylesheet' type='text/css'>
+	
 </head>
 <body>
 	<section id='content'>
+		<img src="images/self-portrait.jpg" alt="sparkley baboon squad" class="center">
 	   <h1>Lucia Conchello</h1>
 	   <h2>GD Junior</h2>
 	   <p>To learn stuff and live long and prosper.</p>
