--- a/yum/untitled folder/page2.html
+++ b/yum/untitled folder/page2.html
@@ -5,10 +5,13 @@
 		
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		
+		<link href='http://fonts.googleapis.com/css?family=Anton|Francois+One|Oswald:700' rel='stylesheet' type='text/css'>
+		
 		
 		</head>
 		<body>
-		<h1>BANANA<br>PANCAKES</h1>
+		<a class="button buzz"><h1>BANANA</h1></a><br>
+		<a class="button buzz"><h2>PANCAKES</h2></a>
 		</body>
 		
 		</html>
