--- a/meeee/index.html
+++ b/meeee/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<section id='content'>
-		<img src="images/Self-portrait.jpg"class="center">
+		<img src="images/Self-portrait.jpg" alt="sparkley baboon squad" class="center">
 	   <h1>Lucia Conchello</h1>
 	   <h2>GD Junior</h2>
 	   <p>To learn stuff and live long and prosper.</p>
