--- a/yum/index.html
+++ b/yum/index.html
@@ -35,7 +35,8 @@
 				<li>Bake in the over for 40-45 minutes until the pudding is golden brown.</li>
 			</ul>
 				<p>Serve hot or warm, with or without cream.</p>
-		</article>
+		</article><br><br>
+		<a href="http://luciac.github.io/yum/banana/page2.html">Click me like one of your french girls.</a>
 	</section>
   </body>
 </html>
