whos your nephew

--- a/homework/index.html
+++ b/homework/index.html
@@ -13,7 +13,7 @@
 		<h2>Yum</h2>
 				<p><a href='http://luciac.github.io/yum/'>CLICKKKK</a></p>
 		<h2>Cats vs Dogs</h2>
-				<p><a href='http://luciac.github.io/cats-vs-dogs/'> Hi.</p>
+				<p><a href='http://luciac.github.io/cats-vs-dogs/'> Hi.</a></p>
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
@@ -21,7 +21,9 @@
 		<h2>Robots</h2>
 		    	<p>Add your link(s) Here</p>
 		<h2>Final Project</h2>
-				<p>Add your link(s) Here</p>				
+				<p>Don't click at me I'm hideous!</p>
+		<h2>Random shit</h2>
+				<p><a href='http://luciac.github.io/GIF!/'>Stop clicking me!</a>
 	</section>
 
 </body>
