--- a/homework/index.html
+++ b/homework/index.html
@@ -15,14 +15,14 @@
 		<h2>Cats vs Dogs</h2>
 				<p><a href='http://luciac.github.io/cats-vs-dogs/'> Hi.</a></p>
 		<h2>Wireframes</h2>
-				<p>Add your link(s) Here</p>
+				<p>whats in the linkkkkkk</p>
 		<h2>Llama Love</h2>
-				<p>Add your link(s) Here</p>
+				<p>Aint no love here yet.</p>
 		<h2>Robots</h2>
-		    	<p>Add your link(s) Here</p>
+		    	<p>You can see me, but you can't click me</p>
 		<h2>Final Project</h2>
 				<p>Don't click at me I'm hideous!</p>
-		<h2>Random shit</h2>
+		<h2>Random ship</h2>
 				<p><a href='http://luciac.github.io/GIF!/'>Stop clicking me!</a>
 	</section>
 
