--- a/cats-vs-dogs-original/index.html
+++ b/cats-vs-dogs-original/index.html
@@ -13,9 +13,9 @@
 
 
   <body>
-	<section class="nav">
-		<img src="images/dogvscat-logo.gif" alt="logo" class="logo">
+	<section>
 	<nav>
+	<img src="images/dogvscat-logo.gif" alt="logo" class="centered">
 		<ul>
 			<li>Photos</li>
 			<li>About</li>
@@ -25,27 +25,18 @@
 		</ul>
 	</nav>
   	</section>
-	
-	
-	<section id="both"> <br>
-	
-	
-	<article id="left">
-	<img src="images/puppy.jpg" alt="children of the cookies" height="242">
+	<section>
+	<!--	<h1>Dogs Vs Cats</h1>--> <br>
+	<article>
 	<h2>Dogs have better noses</h2><br>
+	<img src="images/puppy.jpg" alt="children of the cookies" height="242">
 	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
-	</article>
-	
-	<article id="right">
-		<img src="images/Sad-Cat.jpg" alt="Dawn of the cookies" height="242"> <br>
+		<br><br>
 	<h2>Cats have better tongues</h2><br>
+	<img src="images/Sad-Cat.jpg" alt="Dawn of the cookies" height="242">
 	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
 	</article>
-	
-	
 	<footer>images and copy from wiki commons<br>copyright Martha Rettig</footer>
-	
-	
 	</section>
   </body>
 </html>
