--- a/homework/index.html
+++ b/homework/index.html
@@ -17,7 +17,7 @@
 		<h2>Wireframes</h2>
 				<p>whats in the linkkkkkk</p>
 		<h2>Llama Love</h2>
-				<p>Baby don't hurt me.</p>
+				<p><a href='http://luciac.github.io/llama-love/'>Baby don't hurt me.</a></p>
 		<h2>Robots</h2>
 		    	<p>You can see me, but you can't click me</p>
 		<h2>Final Project</h2>
