--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -18,9 +18,13 @@
 	<nav>
 		<ul>
 			<li>Photos</li>
+			<li>&bull; </li>
 			<li>About</li>
+			<li>&bull; </li>
 			<li>Submit</li>
+			<li>&bull; </li>
 			<li>Blog</li>
+			<li>&bull; </li>
 			<li>Contact</li>
 		</ul>
 	</nav>
@@ -42,10 +46,11 @@
 	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
 	</article>
 	
-	
-	<footer>images and copy from wiki commons<br>copyright Martha Rettig</footer>
-	
-	
 	</section>
+	
+	<footer><p class="wiki">images and copy from wiki commons</p><p class="copy">copyright Martha Rettig</p></footer>
+	
+	
+
   </body>
 </html>
