Benjamine Miles Franklin Bitch!
Beef Jerky.

--- a/21/index.html
+++ b/21/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 <body>
-	<p> I want this thing to like have words and one thing hovering above it all like magical wonder. But what do I want.
+	<p> <!--I want this thing to like have words and one thing hovering above it all like magical wonder. But what do I want.-->
 		21 secrets of the universe.
 		
 		1. When angels cry their tears fall from the heavens in the bermuda triangle and they're so powerful they send you flying to another time in the same bermuda triangle. in a parallel universe. However one cannot get back because angels don't cry in the parallel universe, they party and play limbo. And they win. Which results in even more parties, which result in earthquakes. Sucks to be you if you get pulled into the bermuda triangle. <br><br>
@@ -25,11 +25,13 @@
 		14. Biscuits were invented by early primates. This discovery was lost however because primates weren't very intelligent and used poisonous berries one day to add a little zest to their mornings. It was tasty for a while and then they died, so on one fateful morning a large majority of the primates died. Those smart enough to not eat them later evolved several thousands of years later into humans.<br><br>
 		15. Believe it or not, Egyptians weren't aliens. Neither were the people who made stone henge. But don't go thinking extra-terrestrials have never visited our precious earth. Santa-Clause was an extra-terrestrial. I say was because he has long since died. RIP Santa Clause, you modest, selfless, heart full extra-terrestrial.<br>Note Santa Clause is not to be confused with E.T. E.T. isn't even the poor creature's name. <br><br>
 		16. This fact just happens to rhyme. It is only a cooincidence. When the rare purple turkey bleeds in late June, leopard flowers will begin to bloom far far away on one of Saturn's moons, which in turn causes baby hienas to sing the song of the candy corn monsoons, because they can sense the season of the leopard blooming, and those can sense the bloody purple turkey bleeding and turkeys aren't smart enough to sense anything. If they happen to bleed in june, well then it was lucky for the zebra butterflies on the Saturn moon. Which moon we don't know, that information has been lost with the ages.<br><br>
-		17.  Adolf Hitler's neighbor stole the cookie from the cookie jar and blamed him. This is why baby Adolf grew up to be so angry and wrathful. Don't steal cookies. Don't blame innocent potential psychopaths. This was discovered when a society of physchologists stole Hitler and hid him in an underground bunker untill his death several years later in order to study what makes a human so aweful. This is also why he was never found. There are other factors, but psychologists believe this cookie jar theif to be the root of all evil.<br><br>
+		17.  Adolf Hitler's neighbor stole the cookie from the cookie jar and blamed him. This is why baby Adolf grew up to be so angry and wrathful. Don't steal cookies. Don't blame innocent potential psychopaths. This childhood secret was discovered when a society of physchologists stole Hitler and hid him in an underground bunker, from then untill his death several years later, in order to study what makes a human so aweful. His captivity for observation is also why he was never found. There are other factors, but psychologists believe this cookie jar theif to be the root of all evil. The more "farout" psychologists believe that this cookie theif may even be the anti-christ. This isn't supported by all members of this secret society of psychologists. <br><br>
 		18. Dumbledore is real.<br><br>
+		19.Every three seconds a worm hole eats an atom and sends it hurling back in space and time. Because of this frequent occurrence, most of the cells around you, and part of you, are from every time and place of the universe. 
 		
-		
-		OMG USE DISPLAY INLINE BLOCK -padding may fuck it up
+		<!--
+		GIVE A WIDTH WHEN YOU FLOAT!!!!!!!!!!!!!!!!!
+		OMG USE DISPLAY INLINE BLOCK -padding may fuck it up-->
 	</p>
 
 </body>
