holy baby cherry cakes

--- a/homework/index.html
+++ b/homework/index.html
@@ -19,7 +19,7 @@
 		<h2>Llama Love</h2>
 				<p><a href='http://luciac.github.io/llama-love/'>Baby don't hurt me.</a></p>
 		<h2>Robots</h2>
-		    	<p>You can see me, but you can't click me</p>
+		    	<p><a href='http://luciac.github.io/robots/'>CARROT PUDDINGGGG</a></p>
 		<h2>Final Project</h2>
 				<p>Don't click at me I'm hideous!</p>
 		<h2>Random ship</h2>
