--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+  
+  <title>hampster biscuit</title>
+  	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
   </head>
   <body>
+
+<img src='203.gif'>
 
   </body>
 </html>
