all of the pride

--- a/homework/index.html
+++ b/homework/index.html
@@ -15,7 +15,7 @@
 		<h2>Cats vs Dogs</h2>
 				<p><a href='http://luciac.github.io/cats-vs-dogs/'> Hi.</a></p>
 		<h2>Wireframes</h2>
-				<p>whats in the linkkkkkk</p>
+				<p><a href='http://luciac.github.io/wireframes/'>whats in the linkkkkkk</a></p>
 		<h2>Llama Love</h2>
 				<p><a href='http://luciac.github.io/llama-love/'>Baby don't hurt me.</a></p>
 		<h2>Robots</h2>
