--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -35,13 +35,13 @@
 	
 	
 	<article id="left">
-	<img src="images/puppy.jpg" alt="children of the cookies" height="242">
+	<img src="images/puppy.jpg" alt="children of the cookies" class="dogg">
 	<h2>Dogs have better noses</h2><br>
 	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
 	</article>
 	
 	<article id="right">
-		<img src="images/Sad-Cat.jpg" alt="Dawn of the cookies" height="242"> <br>
+		<img src="images/Sad-Cat.jpg" alt="Dawn of the cookies" class="catt"> <br>
 	<h2>Cats have better tongues</h2><br>
 	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
 	</article>
