SERIOUSLY THOUGH THAT PLANT MOVED

--- a/homework/index.html
+++ b/homework/index.html
@@ -15,11 +15,13 @@
 		<h2>Cats vs Dogs</h2>
 				<p><a href='http://luciac.github.io/cats-vs-dogs/'> Hi.</a></p>
 		<h2>Wireframes</h2>
-				<p><a href='http://luciac.github.io/wireframes/'>whats in the linkkkkkk</a></p>
+				<p><a href='http://luciac.github.io/wireframethings/'>Don't click on any suspicious links.</a></p>
 		<h2>Llama Love</h2>
 				<p><a href='http://luciac.github.io/llama-love/'>Baby don't hurt me.</a></p>
 		<h2>Robots</h2>
 		    	<p><a href='http://luciac.github.io/robots/'>CARROT PUDDINGGGG</a></p>
+		<h2>7</h2>
+				<p><a href='http://luciac.github.io/wireframes/'>whats in the linkkkkkk</a></p>
 		<h2>Final Project</h2>
 				<p>Don't click at me I'm hideous!</p>
 		<h2>Random ship</h2>
