--- a/homework/index.html
+++ b/homework/index.html
@@ -24,8 +24,11 @@
 				<p><a href='http://luciac.github.io/wireframes/'>whats in the linkkkkkk</a></p>
 		<h2>Final Project</h2>
 				<p>Don't click at me I'm hideous!</p>
+		<h2>The text for final project</h2>
+				<p><a href='http://luciac.github.io/21/'>science</a></p>
 		<h2>Random ship</h2>
 				<p><a href='http://luciac.github.io/GIF!/'>Stop clicking me!</a>
+
 	</section>
 
 </body>
