--- a/21/index.html
+++ b/21/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>What is happening</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,300,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
