--- a/21mockups/index.html
+++ b/21mockups/index.html
@@ -24,6 +24,12 @@
 <img src="images/idea1.2.png" alt="rent">
 <img src="images/idea1.3.png" alt="boat">
 <img src="images/idea1.4.png" alt="who">
+<img src="images/idea1.5.png">
+<img src="images/idea2.1png">
+<img src="images/idea2.2.png">
+<img src="images/idea2.3.png">
+<img src="images/idea2.4.png">
+<img src="images/idea2.5.png">
 
 
 
