--- a/21mockups/index.html
+++ b/21mockups/index.html
@@ -25,6 +25,8 @@
 <img src="images/idea1.3.png" alt="boat">
 <img src="images/idea1.4.png" alt="who">
 <img src="images/idea1.5.png">
+
+<h1>Idea two</h1>
 <img src="images/idea2.1png">
 <img src="images/idea2.2.png">
 <img src="images/idea2.3.png">
