--- a/21mockups/index.html
+++ b/21mockups/index.html
@@ -18,18 +18,21 @@
 <body>
 
 	<article>
-<h1>Idea one</h1>
+<h1>Idea One.1</h1>
 <h3>regular scrolling </h3>
 
+<!--
 <img src="images/idea1.1.png" alt="toads">
 <img src="images/idea1.2.png" alt="rent">
 <img src="images/idea1.3.png" alt="boat">
 <img src="images/idea1.4.png" alt="who">
 <img src="images/idea1.5.png">
+-->
+<img src="images/scrollGIF.gif" alt="baboonsauce">
 	</article>
 
 	<article>
-<h1>Idea two</h1>
+<h1>Idea One.2</h1>
 <h3>paralax scrolling</h3>
 <!--
 <img src="images/idea2.1png">
@@ -38,7 +41,7 @@
 <img src="images/idea2.4.png">
 <img src="images/idea2.5.png">
 -->
-<img id='gif' src="images/paralax.gif" alt="castiel, its sam">
+<img src="images/paralacks.gif" alt="castiel, its sam">
 	</article>
 
 
