--- a/21/index.html
+++ b/21/index.html
@@ -12,7 +12,7 @@
 
 	<p> <!--I want this thing to like have words and one thing hovering above it all like magical wonder. But what do I want.-->
 
-<img src="images/no01.jpg">		
+<img src="images/1.png">		
 <article>
 When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! 
 </article>
@@ -24,14 +24,14 @@ When angels cry their tears fall from the heavens and land in the bermuda triang
 </article>
 
 
-<img src="images/no03.jpg">
+<img src="images/3.png">
 <article>
 Before chinchillas are born they are instilled with the knowledge of the meaning of life. However they are chinchillas and they cannot make sense of the information they have been gifted with, for they don't understand mandarin chinese (the language in which the information is given) or speak it to pass the information on to fellow chinese speaking creatures (homo sapiens). Nor do they understand the information in any way at all. Most of the time they do not even think about it.
 </article>
 
 
 
-<img src="images/no04.jpg">
+<img src="images/4.png">
 <article>
 	Dumbledore is real.
 </article>		
@@ -39,26 +39,26 @@ Before chinchillas are born they are instilled with the knowledge of the meaning
 
 
 
-<img src="images/no05.jpg">
+<img src="images/5.png">
 <article>
 	There is a tribe of eskimos that celebrate a holiday roughly translating to "Bastards' Day" where they make homemade horns out of various materials and dance in ice cold water in honour of the loss of unicorns. The unicorns became extinct centuries ago, but the tradition still carries on.
 	</article>
 	
 
-<img src="images/no06.jpg">
+<img src="images/6.png">
 <article>
 	Most people assume that the narwhale was the bastard offspring of the unicorns. Au contrair mes amis. The unicorn was the bastard child of narwhales. Thats why they don't exist anymore. Horses do not fare well in the depths of the oceans. Its a sad day for bastard children everywhere. 
 </article>		
 
 
-<img src="images/no07.jpg">	
+<img src="images/7.png">	
 <article>
  Alcohol, like beer and wine, is not from fermented plants and fruits. It is dragon milk. It makes baby dragons grow up big and strong, but humans are no where near the awesomeness that are dragons, so it makes us stupid. We cannot handle the power of dragon milk.
  </article>
  
  
  
-<img src="images/no08.jpg">
+<img src="images/8.png">
 <article>
 	There is an animal that has mastered the human language: The Octopus. Which is phenomenal considering most people can't even figure out where its mouth is. The octopus is so smart it has hidden this fact from the majority of the population, save the few worthy enough to know the 21 secrets of the universe.
 </article>
