--- a/21/index.html
+++ b/21/index.html
@@ -12,56 +12,91 @@
 
 	<p> <!--I want this thing to like have words and one thing hovering above it all like magical wonder. But what do I want.-->
 
+
+<section id="one">
 <img src="images/1.png">		
 <article>
 When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! 
 </article>
+</section>
 
 
+
+<section id"two">
 <article>
 <h2>2</h2>
 When angels cry their tears fall from the heavens and land in the bermuda triangle. The angel tears are so powerful they send you flying to another time in the bermuda triangle. In a parallel universe. However one cannot get back because angels don't cry in the parallel universe, they party and play limbo. And they win. Which results in even more parties, which result in earthquakes. Sucks to be you if you get pulled into the bermuda triangle. 
 </article>
+</section>
 
 
+
+
+<section id"three">
 <img src="images/3.png">
 <article>
 Before chinchillas are born they are instilled with the knowledge of the meaning of life. However they are chinchillas and they cannot make sense of the information they have been gifted with, for they don't understand mandarin chinese (the language in which the information is given) or speak it to pass the information on to fellow chinese speaking creatures (homo sapiens). Nor do they understand the information in any way at all. Most of the time they do not even think about it.
 </article>
+</section>
 
 
 
+
+
+<section id="four">
 <img src="images/4.png">
 <article>
 	Dumbledore is real.
 </article>		
+</section>
 
 
 
 
+
+<section id="five">
 <img src="images/5.png">
 <article>
 	There is a tribe of eskimos that celebrate a holiday roughly translating to "Bastards' Day" where they make homemade horns out of various materials and dance in ice cold water in honour of the loss of unicorns. The unicorns became extinct centuries ago, but the tradition still carries on.
 	</article>
+	</section>
 	
-
+	
+	
+	
+	
+<section id="six">
 <img src="images/6.png">
 <article>
 	Most people assume that the narwhale was the bastard offspring of the unicorns. Au contrair mes amis. The unicorn was the bastard child of narwhales. Thats why they don't exist anymore. Horses do not fare well in the depths of the oceans. Its a sad day for bastard children everywhere. 
 </article>		
+</section>
 
 
+
+
+
+
+<section id="seven">
 <img src="images/7.png">	
 <article>
  Alcohol, like beer and wine, is not from fermented plants and fruits. It is dragon milk. It makes baby dragons grow up big and strong, but humans are no where near the awesomeness that are dragons, so it makes us stupid. We cannot handle the power of dragon milk.
  </article>
+ </section>
  
  
  
+ 
+ 
+ <section id="eight">
 <img src="images/8.png">
 <article>
 	There is an animal that has mastered the human language: The Octopus. Which is phenomenal considering most people can't even figure out where its mouth is. The octopus is so smart it has hidden this fact from the majority of the population, save the few worthy enough to know the 21 secrets of the universe.
 </article>
+</section>
+
+
+
 
 
  <article>
@@ -129,7 +164,7 @@ This fact just happens to rhyme. It is only a cooincidence. When the rare purple
  
  
  
- </article>
+ <article>
  Every three seconds a worm hole eats an atom and sends it hurling back in space and time. Because of this frequent occurrence, most of the atoms in your cells, in your birthday cake, around you, part of you, and in the robots that take over the future union of gardeners and start the garden revolution, are from every time and place of the universe. 
  </article>
  
