--- a/21/index.html
+++ b/21/index.html
@@ -8,7 +8,41 @@
 </head>
 <body>
 
+
+<section>
 <h1>21 secrets of the universe!</h1>
+<nav>
+
+
+<ul id="burger">
+<li><img src="images/21-bp.png">
+	<ul>
+	<li>one</li>
+	<li>two</li>
+	<li>three</li>
+	<li>four</li>
+	<li>five</li>
+	<li>six</li>
+	<li>seven</li>
+	<li>eight</li>
+	<li>nine</li>
+	<li>ten</li>
+	<li>eleven</li>
+	<li>twelve</li>
+	<li>thirteen</li>
+	<li>fourteen</li>
+	<li>fifteen</li>
+	<li>sixteen</li>
+	<li>seventeen</li>
+	<li>eighteen</li>
+	<li>nineteen</li>
+	<li>twenty</li>
+	<li>TWENTY ONE!</li>
+	</ul>
+</li>
+</ul>
+</nav>
+</section>
 
 	<p> <!--I want this thing to like have words and one thing hovering above it all like magical wonder. But what do I want.-->
 
@@ -24,7 +58,7 @@ When humans turn 21, if they are found to be worthy, they will be awarded the 21
 
 <section id"two">
 <article>
-<h2>2</h2>
+<h3>2</h3>
 When angels cry their tears fall from the heavens and land in the bermuda triangle. The angel tears are so powerful they send you flying to another time in the bermuda triangle. In a parallel universe. However one cannot get back because angels don't cry in the parallel universe, they party and play limbo. And they win. Which results in even more parties, which result in earthquakes. Sucks to be you if you get pulled into the bermuda triangle. 
 </article>
 </section>
