--- a/parallax/inddex.html
+++ b/parallax/inddex.html
@@ -14,7 +14,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>
       $(function(){
-	  $('.parallax-container').parallax({imageSrc: 'images/1.png'});
+	  	 $(window).resize(function(){
+		            var parallaxHeight = Math.max($(window).height() * 0.7, 200) | 0;
+		            $('.parallax-container').height(parallaxHeight);
+		          }).trigger('resize');
 
 
               });
