--- a/parallax/inddex.html
+++ b/parallax/inddex.html
@@ -61,7 +61,7 @@
       </div>
     </section>
 
-    <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src=".images/3.png" data-natural-width="auto" data-natural-height="auto"></div>
+    <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/3.png" data-natural-width="auto" data-natural-height="auto"></div>
 
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/4.png" data-natural-width="750" data-natural-height="763"></div>
 
