--- a/parallax/inddex.html
+++ b/parallax/inddex.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OMG! Science.</title>
+	
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700,800,400' rel='stylesheet' type='text/css'>
+	
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,13 +30,13 @@
   <body>
     <section>
       <div class="container">
-        <div id="ios-notice" class="alert alert-info hidden"><p><strong>21 SECRETS OF THE UNIVERSE</strong> </p></div>
+        <div id="ios-notice" class="alert alert-info hidden"><h1><strong>21 SECRETS OF THE UNIVERSE</strong> </h1></div>
       </div>
     </section>
 
 
 
-    <div class="parallax-container" data-parallax="scroll" data-position="top" data-bleed="10" data-image-src="images/1.png" data-natural-width="auto" data-natural-height="auto"></div>
+    <div class="parallax-container" data-parallax="scroll" data-image-src="images/1.png"></div>
 
 
 
@@ -52,7 +55,7 @@
 
 
 
-    <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-speed="0.2" data-image-src="images/2.png" data-natural-width="1400" data-natural-height="1400"></div>
+    <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/2.png" data-natural-width="750" data-natural-height="763"></div>
 
     <section>
       <div class="container">
@@ -61,7 +64,7 @@
       </div>
     </section>
 
-    <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/3.png" data-natural-width="auto" data-natural-height="auto"></div>
+    <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/3.png" data-natural-width="750" data-natural-height="763"></div>
 
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/4.png" data-natural-width="750" data-natural-height="763"></div>
 
