Don't be exactly half a pound of black forest ham.

--- a/parallax/index.html
+++ b/parallax/index.html
@@ -43,7 +43,7 @@
 
 
 
-    <section>
+    <section id="one">
       <div class="container">
 
         <p>When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! </p>
@@ -54,7 +54,7 @@
 
 
 
-<section id="one">
+<section id="two">
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/2.png" data-natural-width="750" data-natural-height="763"></div>
 </section>
 
@@ -153,6 +153,19 @@
       </div>
     </section>		
 	
+	
+	
+	
+	
+	
+
+	
+    <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/10.png" data-natural-width="750" data-natural-height="763"></div>
+    <section>
+      <div class="container">
+      <p>Adolf Hitler's neighbor stole the cookie from the cookie jar and blamed him. This is why baby Adolf grew up to be so angry and wrathful. Don't steal cookies. Don't blame innocent potential psychopaths. This childhood secret was discovered when a society of physchologists stole Hitler and hid him in an underground bunker, from then untill his death several years later, in order to study what makes a human so aweful. His captivity for observation is also why he was never found. There are other factors, but psychologists believe this cookie jar theif to be the root of all evil. The more "farout" psychologists believe that this cookie theif may even be the anti-christ. This isn't supported by all members of this secret society of psychologists.</p>
+      </div>
+    </section>		
 	
 	
 	
