BOREDDDDD LIKE THE WINDDDDDDD

--- a/21/index.html
+++ b/21/index.html
@@ -11,11 +11,11 @@
 
 <section>
 <h1>21 secrets of the universe!</h1>
+
+
 <nav>
-
-
 <ul id="burger">
-<li><img src="images/21-tp.png">
+<li><img src="images/21-bp.png">
 	<ul>
 	<li>one</li>
 	<li>two</li>
