--- a/21/index.html
+++ b/21/index.html
@@ -11,22 +11,23 @@
 
 <section>
 <h1>21 secrets of the universe!</h1>
+<a id="top"> </a>
 
 
 <nav>
 <ul id="burger">
 <li><img src="images/21-bp.png">
 	<ul>
-	<li>one</li>
-	<li>two</li>
-	<li>three</li>
-	<li>four</li>
-	<li>five</li>
-	<li>six</li>
-	<li>seven</li>
-	<li>eight</li>
-	<li>nine</li>
-	<li>ten</li>
+	<li><a href='#1'>one</a></li>
+	<li><a href='#2'>two</a></li>
+	<li><a href='#3'>three</a></li>
+	<li><a href='#4'>four</a></li>
+	<li><a href='#5'>five</a></li>
+	<li><a href='#6'>six</a></li>
+	<li><a href='#7'>seven</a></li>
+	<li><a href='#8'>eight</a></li>
+	<li><a href='#9'>nine</a></li>
+	<li><a href='#10'>ten</a></li>
 	<li>eleven</li>
 	<li>twelve</li>
 	<li>thirteen</li>
@@ -48,6 +49,7 @@
 
 
 <section id="one">
+<a id="1"> </a>
 <img src="images/1.png">		
 <article>
 When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! 
@@ -56,7 +58,8 @@ When humans turn 21, if they are found to be worthy, they will be awarded the 21
 
 
 
-<section id"two">
+<section id="two">
+<a id="2"> </a>
 <article>
 <h3>2</h3>
 When angels cry their tears fall from the heavens and land in the bermuda triangle. The angel tears are so powerful they send you flying to another time in the bermuda triangle. In a parallel universe. However one cannot get back because angels don't cry in the parallel universe, they party and play limbo. And they win. Which results in even more parties, which result in earthquakes. Sucks to be you if you get pulled into the bermuda triangle. 
@@ -66,7 +69,8 @@ When angels cry their tears fall from the heavens and land in the bermuda triang
 
 
 
-<section id"three">
+<section id="three">
+<a id="3"> </a>
 <img src="images/3.png">
 <article>
 Before chinchillas are born they are instilled with the knowledge of the meaning of life. However they are chinchillas and they cannot make sense of the information they have been gifted with, for they don't understand mandarin chinese (the language in which the information is given) or speak it to pass the information on to fellow chinese speaking creatures (homo sapiens). Nor do they understand the information in any way at all. Most of the time they do not even think about it.
@@ -78,6 +82,7 @@ Before chinchillas are born they are instilled with the knowledge of the meaning
 
 
 <section id="four">
+<a id="4"> </a>
 <img src="images/4.png">
 <article>
 	Dumbledore is real.
@@ -89,6 +94,7 @@ Before chinchillas are born they are instilled with the knowledge of the meaning
 
 
 <section id="five">
+<a id="5"> </a>
 <img src="images/5.png">
 <article>
 	There is a tribe of eskimos that celebrate a holiday roughly translating to "Bastards' Day" where they make homemade horns out of various materials and dance in ice cold water in honour of the loss of unicorns. The unicorns became extinct centuries ago, but the tradition still carries on.
@@ -100,6 +106,7 @@ Before chinchillas are born they are instilled with the knowledge of the meaning
 	
 	
 <section id="six">
+<a id="6"> </a>
 <img src="images/6.png">
 <article>
 	Most people assume that the narwhale was the bastard offspring of the unicorns. Au contrair mes amis. The unicorn was the bastard child of narwhales. Thats why they don't exist anymore. Horses do not fare well in the depths of the oceans. Its a sad day for bastard children everywhere. 
@@ -112,6 +119,7 @@ Before chinchillas are born they are instilled with the knowledge of the meaning
 
 
 <section id="seven">
+<a id="7"> </a>
 <img src="images/7.png">	
 <article>
  Alcohol, like beer and wine, is not from fermented plants and fruits. It is dragon milk. It makes baby dragons grow up big and strong, but humans are no where near the awesomeness that are dragons, so it makes us stupid. We cannot handle the power of dragon milk.
@@ -123,6 +131,7 @@ Before chinchillas are born they are instilled with the knowledge of the meaning
  
  
  <section id="eight">
+ <a id="8"> </a>
 <img src="images/8.png">
 <article>
 	There is an animal that has mastered the human language: The Octopus. Which is phenomenal considering most people can't even figure out where its mouth is. The octopus is so smart it has hidden this fact from the majority of the population, save the few worthy enough to know the 21 secrets of the universe.
@@ -133,14 +142,40 @@ Before chinchillas are born they are instilled with the knowledge of the meaning
 
 
 
- <article>
- Every time you sneeze, some creature in a parallel universe sneezes at the exact same time. This phenomenon is a result of gravity, how this works we do not know yet. Everything in the everywhere is connected. Even the nowhere and the everywhere are connected. Connectivity. Unity. Life. Universes.
-</article>
 
+<section id="nine">
+<a id="9"> </a>
+<img src="images/9.png">
 
 <article>
 Once every 5 googleplex years a creature much resembling a narwhale, giraffe, jelly fish and wasp made of metal the size of a push pin crawls out of its natural habitat, the black hole, to find a mate. To mate they simply touch horns and the moment they touch horns, their opposing magnetism creates a massive explosion sending matter and space and time and magic flying in all directions. This could be the cause of the big bang, however several more years are needed to confirm this as the last living creature to witness this is most definitely dead from the blast.
 </article>
+</section>
+
+
+
+
+
+
+
+<section id="ten">
+<a id="10"> </a>
+<img src="images/10.png">
+<article>
+ Adolf Hitler's neighbor stole the cookie from the cookie jar and blamed him. This is why baby Adolf grew up to be so angry and wrathful. Don't steal cookies. Don't blame innocent potential psychopaths. This childhood secret was discovered when a society of physchologists stole Hitler and hid him in an underground bunker, from then untill his death several years later, in order to study what makes a human so aweful. His captivity for observation is also why he was never found. There are other factors, but psychologists believe this cookie jar theif to be the root of all evil. The more "farout" psychologists believe that this cookie theif may even be the anti-christ. This isn't supported by all members of this secret society of psychologists. </article>
+ </section>
+ 
+ 
+ 
+ 
+ 
+ 
+
+
+ <article>
+ Every time you sneeze, some creature in a parallel universe sneezes at the exact same time. This phenomenon is a result of gravity, how this works we do not know yet. Everything in the everywhere is connected. Even the nowhere and the everywhere are connected. Connectivity. Unity. Life. Universes.
+</article>
+
 
 
 <article>
@@ -186,12 +221,6 @@ When God cries sad tears, he cries seltzer water.
  
 <article> 
 This fact just happens to rhyme. It is only a cooincidence. When the rare purple turkey bleeds in late June, leopard flowers will begin to bloom far far away on one of Saturn's moons, which in turn causes baby hienas to sing the song of the candy corn monsoons, because they can sense the season of the leopard blooming, and those can sense the bloody purple turkey bleeding and turkeys aren't smart enough to sense anything. If they happen to bleed in june, well then it was lucky for the zebra butterflies on the Saturn moon. Which moon we don't know, that information has been lost with the ages.</article>
-
-
-
-
-<article>
- Adolf Hitler's neighbor stole the cookie from the cookie jar and blamed him. This is why baby Adolf grew up to be so angry and wrathful. Don't steal cookies. Don't blame innocent potential psychopaths. This childhood secret was discovered when a society of physchologists stole Hitler and hid him in an underground bunker, from then untill his death several years later, in order to study what makes a human so aweful. His captivity for observation is also why he was never found. There are other factors, but psychologists believe this cookie jar theif to be the root of all evil. The more "farout" psychologists believe that this cookie theif may even be the anti-christ. This isn't supported by all members of this secret society of psychologists. </article>
  
  
  
