--- a/parallax/index.html
+++ b/parallax/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OMG! Science.</title>
 	
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700,800,400' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Delius+Swash+Caps|Delius+Unicase:400,700|Delius' rel='stylesheet' type='text/css'>
 	
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -46,10 +46,16 @@
     <section id="one">
       <div class="container">
 
-        <p>When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! </p>
+        <p id="un">When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! </p>
 
       </div>
     </section>
+
+
+
+
+
+
 
 
 
@@ -63,9 +69,15 @@
 
     <section>
       <div class="container">
-        <p>When angels cry their tears fall from the heavens and land in the bermuda triangle. The angel tears are so powerful they send you flying to another time in the bermuda triangle. In a parallel universe. However one cannot get back because angels don't cry in the parallel universe, they party and play limbo. And they win. Which results in even more parties, which result in earthquakes. Sucks to be you if you get pulled into the bermuda triangle.</p>
+        <p id="deux">When angels cry their tears fall from the heavens and land in the bermuda triangle. The angel tears are so powerful they send you flying to another time in the bermuda triangle. In a parallel universe. However one cannot get back because angels don't cry in the parallel universe, they party and play limbo. And they win. Which results in even more parties, which result in earthquakes. Sucks to be you if you get pulled into the bermuda triangle.</p>
       </div>
     </section>
+
+
+
+
+
+
 
 
 
@@ -85,12 +97,26 @@
 
 
 
+
+
+
+
+
+
+
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/4.png" data-natural-width="750" data-natural-height="763"></div>
     <section>
       <div class="container">
-      <p>Dumbledore is real.</p>
+      <p id="quatre">Dumbledore is real.</p>
       </div>
     </section>
+	
+	
+	
+	
+	
+	
+	
 	
 	
 	
@@ -102,7 +128,7 @@
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/5.png" data-natural-width="750" data-natural-height="763"></div>
     <section>
       <div class="container">
-      <p>There is a tribe of eskimos that celebrate a holiday roughly translating to "Bastards' Day" where they make homemade horns out of various materials and dance in ice cold water in honour of the loss of unicorns. The unicorns became extinct centuries ago, but the tradition still carries on.</p>
+      <p id="cinq">There is a tribe of eskimos that celebrate a holiday roughly translating to "Bastards' Day" where they make homemade horns out of various materials and dance in ice cold water in honour of the loss of unicorns. The unicorns became extinct centuries ago, but the tradition still carries on.</p>
       </div>
     </section>
 	
@@ -122,9 +148,14 @@
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/6.png" data-natural-width="750" data-natural-height="763"></div>
     <section>
       <div class="container">
-      <p>Most people assume that the narwhale was the bastard offspring of the unicorns. Au contrair mes amis. The unicorn was the bastard child of narwhales. Thats why they don't exist anymore. Horses do not fare well in the depths of the oceans. Its a sad day for bastard children everywhere.</p>
+      <p id="sixx">Most people assume that the narwhale was the bastard offspring of the unicorns. Au contrair mes amis. The unicorn was the bastard child of narwhales. Thats why they don't exist anymore. Horses do not fare well in the depths of the oceans. Its a sad day for bastard children everywhere.</p>
       </div>
     </section>
+	
+	
+	
+	
+	
 	
 	
 	
@@ -136,9 +167,17 @@
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/7.png" data-natural-width="750" data-natural-height="763"></div>
     <section>
       <div class="container">
-      <p>Alcohol, like beer and wine, is not from fermented plants and fruits. It is dragon milk. It makes baby dragons grow up big and strong, but humans are no where near the awesomeness that are dragons, so it makes us stupid. We cannot handle the power of dragon milk.</p>
+      <p id="sept">Alcohol, like beer and wine, is not from fermented plants and fruits. It is dragon milk. It makes baby dragons grow up big and strong, but humans are no where near the awesomeness that are dragons, so it makes us stupid. We cannot handle the power of dragon milk.</p>
       </div>
     </section>	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 	
 	
@@ -149,7 +188,7 @@
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/8.png" data-natural-width="750" data-natural-height="763"></div>
     <section>
       <div class="container">
-      <p>There is an animal that has mastered the human language: The Octopus. Which is phenomenal considering most people can't even figure out where its mouth is. The octopus is so smart it has hidden this fact from the majority of the population, save the few worthy enough to know the 21 secrets of the universe.</p>
+      <p id="huit">There is an animal that has mastered the human language: The Octopus. Which is phenomenal considering most people can't even figure out where its mouth is. The octopus is so smart it has hidden this fact from the majority of the population, save the few worthy enough to know the 21 secrets of the universe.</p>
       </div>
     </section>		
 	
@@ -160,10 +199,13 @@
 
 
 
+
+
+
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/9.png" data-natural-width="750" data-natural-height="763"></div>
     <section>
       <div class="container">
-      <p>Once every 5 googleplex years a creature much resembling a narwhale, giraffe, jelly fish and wasp made of metal the size of a push pin crawls out of its natural habitat, the black hole, to find a mate. To mate they simply touch horns and the moment they touch horns, their opposing magnetism creates a massive explosion sending matter and space and time and magic flying in all directions. This could be the cause of the big bang, however several more years are needed to confirm this as the last living creature to witness this is most definitely dead from the blast.</p>
+      <p id="neuf">Once every 5 googleplex years a creature much resembling a narwhale, giraffe, jelly fish and wasp made of metal the size of a push pin crawls out of its natural habitat, the black hole, to find a mate. To mate they simply touch horns and the moment they touch horns, their opposing magnetism creates a massive explosion sending matter and space and time and magic flying in all directions. This could be the cause of the big bang, however several more years are needed to confirm this as the last living creature to witness this is most definitely dead from the blast.</p>
       </div>
     </section>	
 
@@ -179,7 +221,7 @@
     <div class="parallax-container" data-parallax="scroll" data-bleed="10" data-image-src="images/10.png" data-natural-width="750" data-natural-height="763"></div>
     <section>
       <div class="container">
-      <p>Adolf Hitler's neighbor stole the cookie from the cookie jar and blamed him. This is why baby Adolf grew up to be so angry and wrathful. Don't steal cookies. Don't blame innocent potential psychopaths. This childhood secret was discovered when a society of physchologists stole Hitler and hid him in an underground bunker, from then untill his death several years later, in order to study what makes a human so aweful. His captivity for observation is also why he was never found. There are other factors, but psychologists believe this cookie jar theif to be the root of all evil. The more "farout" psychologists believe that this cookie theif may even be the anti-christ. This isn't supported by all members of this secret society of psychologists.</p>
+      <p id="dix">Adolf Hitler's neighbor stole the cookie from the cookie jar and blamed him. This is why baby Adolf grew up to be so angry and wrathful. Don't steal cookies. Don't blame innocent potential psychopaths. This childhood secret was discovered when a society of physchologists stole Hitler and hid him in an underground bunker, from then untill his death several years later, in order to study what makes a human so aweful. His captivity for observation is also why he was never found. There are other factors, but psychologists believe this cookie jar theif to be the root of all evil. The more "farout" psychologists believe that this cookie theif may even be the anti-christ. This isn't supported by all members of this secret society of psychologists.</p>
       </div>
     </section>		
 	
