WHYARE YOU TILINGGGGGG

--- a/parallax/index.html
+++ b/parallax/index.html
@@ -36,10 +36,9 @@
 
 
 
-    <div class="parallax-container" data-parallax="scroll" data-image-src="images/1.png"></div>
 
 
-
+    <div class="test1"> <div class="parallax-container" data-parallax="scroll" data-image-src="images/1.png"></div></div>
 
 
 
