omg THE CARROT KING FIXED THE WORLD

--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -18,13 +18,13 @@
 	<nav>
 		<ul>
 			<li>Photos</li>
-			<li>&bull; </li>
+			<li class="bull">&bull; </li>
 			<li>About</li>
-			<li>&bull; </li>
+			<li class="bull">&bull; </li>
 			<li>Submit</li>
-			<li>&bull; </li>
+			<li class="bull">&bull; </li>
 			<li>Blog</li>
-			<li>&bull; </li>
+			<li class="bull">&bull; </li>
 			<li>Contact</li>
 		</ul>
 	</nav>
