--- a/paralax/index.html
+++ b/paralax/index.html
@@ -39,7 +39,7 @@
 
 
 
-<div id="two" class="slide header">
+<div id="two" class="photo">
   <h1> </h1>
 </div>
 
@@ -49,7 +49,7 @@
 
 
 
-<div id="three" class="slide header">
+<div id="three" class="photo">
   <h1> </h1>
 </div>
 
@@ -62,7 +62,7 @@
 
 
 
-<div id="four" class="slide header">
+<div id="four" class="photo">
   <h1> </h1>
 </div>
 
@@ -75,7 +75,7 @@
 
 
 
-<div id="five" class="slide header">
+<div id="five" class="photo">
   <h1> </h1>
 </div>
 
@@ -90,7 +90,7 @@
 
 
 
-<div id="six" class="slide header">
+<div id="six" class="photo">
   <h1> </h1>
 </div>
 
@@ -107,7 +107,7 @@
 
 
 
-<div id="seven" class="slide header">
+<div id="seven" class="photo">
   <h1> </h1>
 </div>
 
@@ -127,7 +127,7 @@
 
 
 
-<div id="eight" class="slide header">
+<div id="eight" class="photo">
   <h1> </h1>
 </div>
 
@@ -147,7 +147,7 @@
 
 
 
-<div id="nine" class="slide header">
+<div id="nine" class="photo">
   <h1> </h1>
 </div>
 
@@ -167,7 +167,7 @@
 
 
 
-<div id="ten" class="slide header">
+<div id="ten" class="photo">
   <h1> </h1>
 </div>
 
