--- a/21secrets/index.html
+++ b/21secrets/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OMG! Science.</title>
+    <title>HappyBday Gabbs!</title>
 	
 	<link href='http://fonts.googleapis.com/css?family=Delius+Swash+Caps|Delius+Unicase:400,700|Delius' rel='stylesheet' type='text/css'>
 	
