--- a/homework/index.html
+++ b/homework/index.html
@@ -16,6 +16,7 @@
 				<p><a href='http://luciac.github.io/cats-vs-dogs/'> Hi.</a></p>
 		<h2>Wireframes</h2>
 				<p><a href='http://luciac.github.io/wireframethings/'>Don't click on any suspicious links.</a></p>
+				<p><a href='http://luciac.github.io/21mockups/'>Except for this sketchy link. ;)</a></p>
 		<h2>Llama Love</h2>
 				<p><a href='http://luciac.github.io/llama-love/'>Baby don't hurt me.</a></p>
 		<h2>Robots</h2>
@@ -23,9 +24,9 @@
 		<h2>7</h2>
 				<p><a href='http://luciac.github.io/wireframes/'>whats in the linkkkkkk</a></p>
 		<h2>Final Project</h2>
-				<p>Don't click at me I'm hideous!</p>
-		<h2>The text for final project</h2>
-				<p><a href='http://luciac.github.io/21/'>science</a></p>
+				<p><a href='http://luciac.github.io/21secrets/'>Don't click at me I'm hideous!</a></p>
+	<!--	<h2>The text for final project</h2>
+				<p><a href='http://luciac.github.io/21/'>science</a></p>  -->
 		<h2>Random ship</h2>
 				<p><a href='http://luciac.github.io/GIF!/'>Stop clicking me!</a>
 
