RUN AWAY TO DIAGONALLLYYYY

--- a/21secrets/index.html
+++ b/21secrets/index.html
@@ -34,30 +34,30 @@
 
 
 <div id="un" class="text"> <p>When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! </p>
-<ul id="menu2">
+<ul tabindex="0" id="menu2">
 <li><a href="#"><img src="images/miniburger.png" hieght="20px" alt="Secrets Menu">
-	<ul>
+	<ul class="numbers">
 		<li><a href="#one"><img src="images/nav1.png" alt="1"></a></li>
-		<li><a href="#two"><img src="images/nav2.png" alt="1"></a></li>
-		<li><a href="#three"><img src="images/nav3.png" alt="1"></a></li>
-		<li><a href="#four"><img src="images/nav4.png" alt="1"></a></li>
-		<li><a href="#five"><img src="images/nav5.png" alt="1"></a></li>
-		<li><a href="#six"><img src="images/nav6.png" alt="1"></a></li>
-		<li><a href="#seven"><img src="images/nav7.png" alt="1"></a></li>
-		<li><a href="#eight"><img src="images/nav8.png" alt="1"></a></li>
-		<li><a href="#nine"><img src="images/nav9.png" alt="1"></a></li>
-		<li><a href="#ten"><img src="images/nav10.png" alt="1"></a></li>
-		<li><a href="#eleven"><img src="images/nav11.png" alt="1"></a></li>
-		<li><a href="#twelve"><img src="images/nav12.png" alt="1"></a></li>
-		<li><a href="#thirteen"><img src="images/nav13.png" alt="1"></a></li>
-		<li><a href="#fourteen"><img src="images/nav14.png" alt="1"></a></li>
-		<li><a href="#fifteen"><img src="images/nav15.png" alt="1"></a></li>
-		<li><a href="#sixteen"><img src="images/nav16.png" alt="1"></a></li>
-		<li><a href="#seventeen"><img src="images/nav17.png" alt="1"></a></li>
-		<li><a href="#eighteen"><img src="images/nav18.png" alt="1"></a></li>
-		<li><a href="#nineteen"><img src="images/nav19.png" alt="1"></a></li>
-		<li><a href="#twenty"><img src="images/nav20.png" alt="1"></a></li>
-		<li><a href="#twentyone"><img src="images/nav21.png" alt="1"></a></li>
+		<li><a href="#two"><img src="images/nav2.png" alt="2"></a></li>
+		<li><a href="#three"><img src="images/nav3.png" alt="3"></a></li>
+		<li><a href="#four"><img src="images/nav4.png" alt="4"></a></li>
+		<li><a href="#five"><img src="images/nav5.png" alt="5"></a></li>
+		<li><a href="#six"><img src="images/nav6.png" alt="6"></a></li>
+		<li><a href="#seven"><img src="images/nav7.png" alt="7"></a></li>
+		<li><a href="#eight"><img src="images/nav8.png" alt="8"></a></li>
+		<li><a href="#nine"><img src="images/nav9.png" alt="9"></a></li>
+		<li><a href="#ten"><img src="images/nav10.png" alt="10"></a></li>
+		<li><a href="#eleven"><img src="images/nav11.png" alt="11"></a></li>
+		<li><a href="#twelve"><img src="images/nav12.png" alt="12"></a></li>
+		<li><a href="#thirteen"><img src="images/nav13.png" alt="13"></a></li>
+		<li><a href="#fourteen"><img src="images/nav14.png" alt="14"></a></li>
+		<li><a href="#fifteen"><img src="images/nav15.png" alt="15"></a></li>
+		<li><a href="#sixteen"><img src="images/nav16.png" alt="16"></a></li>
+		<li><a href="#seventeen"><img src="images/nav17.png" alt="17"></a></li>
+		<li><a href="#eighteen"><img src="images/nav18.png" alt="18"></a></li>
+		<li><a href="#nineteen"><img src="images/nav19.png" alt="19"></a></li>
+		<li><a href="#twenty"><img src="images/nav20.png" alt="20"></a></li>
+		<li><a href="#twentyone"><img src="images/nav21.png" alt="21"></a></li>
 	</ul>
 </li></ul>
 </div>
